ran and cleared example noe notebooks

--- a/examples/user_guide/1_Surface.ipynb
+++ b/examples/user_guide/1_Surface.ipynb
@@ -44,7 +44,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:45.076389Z",
+     "iopub.status.busy": "2026-01-23T01:05:45.076296Z",
+     "iopub.status.idle": "2026-01-23T01:05:46.721799Z",
+     "shell.execute_reply": "2026-01-23T01:05:46.721260Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -74,7 +81,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:46.723464Z",
+     "iopub.status.busy": "2026-01-23T01:05:46.723116Z",
+     "iopub.status.idle": "2026-01-23T01:05:48.556884Z",
+     "shell.execute_reply": "2026-01-23T01:05:48.556368Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -98,7 +112,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:48.575684Z",
+     "iopub.status.busy": "2026-01-23T01:05:48.575535Z",
+     "iopub.status.idle": "2026-01-23T01:05:48.650480Z",
+     "shell.execute_reply": "2026-01-23T01:05:48.649590Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shade(terrain, cmap=Elevation, how='linear')"
@@ -118,7 +139,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:48.651901Z",
+     "iopub.status.busy": "2026-01-23T01:05:48.651797Z",
+     "iopub.status.idle": "2026-01-23T01:05:48.740838Z",
+     "shell.execute_reply": "2026-01-23T01:05:48.739814Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -141,7 +169,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:48.743794Z",
+     "iopub.status.busy": "2026-01-23T01:05:48.743688Z",
+     "iopub.status.idle": "2026-01-23T01:05:49.799432Z",
+     "shell.execute_reply": "2026-01-23T01:05:49.798753Z"
+    }
+   },
    "outputs": [],
    "source": [
     "terrain_elevation = shade(terrain, cmap=Elevation, alpha=128, how='linear')\n",
@@ -164,7 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:49.803468Z",
+     "iopub.status.busy": "2026-01-23T01:05:49.803343Z",
+     "iopub.status.idle": "2026-01-23T01:05:50.071899Z",
+     "shell.execute_reply": "2026-01-23T01:05:50.071154Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import slope\n",
@@ -197,7 +239,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:50.076050Z",
+     "iopub.status.busy": "2026-01-23T01:05:50.075898Z",
+     "iopub.status.idle": "2026-01-23T01:05:51.201913Z",
+     "shell.execute_reply": "2026-01-23T01:05:51.201329Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import curvature\n",
@@ -232,7 +281,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:51.206172Z",
+     "iopub.status.busy": "2026-01-23T01:05:51.206076Z",
+     "iopub.status.idle": "2026-01-23T01:05:51.433035Z",
+     "shell.execute_reply": "2026-01-23T01:05:51.432339Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import aspect\n",
@@ -272,7 +328,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:51.435698Z",
+     "iopub.status.busy": "2026-01-23T01:05:51.435594Z",
+     "iopub.status.idle": "2026-01-23T01:05:52.080003Z",
+     "shell.execute_reply": "2026-01-23T01:05:52.079158Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import viewshed\n",
@@ -315,7 +378,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:52.081235Z",
+     "iopub.status.busy": "2026-01-23T01:05:52.081121Z",
+     "iopub.status.idle": "2026-01-23T01:05:58.440849Z",
+     "shell.execute_reply": "2026-01-23T01:05:58.440147Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Will take some time to run...\n",
@@ -347,7 +417,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:58.442088Z",
+     "iopub.status.busy": "2026-01-23T01:05:58.441989Z",
+     "iopub.status.idle": "2026-01-23T01:05:59.426418Z",
+     "shell.execute_reply": "2026-01-23T01:05:59.425836Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import viewshed\n",
@@ -385,7 +462,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:05:59.430189Z",
+     "iopub.status.busy": "2026-01-23T01:05:59.430076Z",
+     "iopub.status.idle": "2026-01-23T01:05:59.992006Z",
+     "shell.execute_reply": "2026-01-23T01:05:59.991256Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%time view = viewshed(terrain, x=OBSERVER_X, y=OBSERVER_Y, observer_elev=100)\n",
@@ -421,7 +505,16 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
