--- a/examples/user_guide/2_Proximity.ipynb
+++ b/examples/user_guide/2_Proximity.ipynb
@@ -30,7 +30,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:02.949671Z",
+     "iopub.status.busy": "2026-01-23T01:06:02.949567Z",
+     "iopub.status.idle": "2026-01-23T01:06:03.839080Z",
+     "shell.execute_reply": "2026-01-23T01:06:03.838460Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -77,7 +84,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:03.841160Z",
+     "iopub.status.busy": "2026-01-23T01:06:03.840870Z",
+     "iopub.status.idle": "2026-01-23T01:06:05.337802Z",
+     "shell.execute_reply": "2026-01-23T01:06:05.337023Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import proximity\n",
@@ -122,7 +136,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:05.358722Z",
+     "iopub.status.busy": "2026-01-23T01:06:05.358564Z",
+     "iopub.status.idle": "2026-01-23T01:06:06.807312Z",
+     "shell.execute_reply": "2026-01-23T01:06:06.806730Z"
+    }
+   },
    "outputs": [],
    "source": [
     "targets = [1, 2, 3, 4]\n",
@@ -150,7 +171,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:06.810035Z",
+     "iopub.status.busy": "2026-01-23T01:06:06.809906Z",
+     "iopub.status.idle": "2026-01-23T01:06:07.677955Z",
+     "shell.execute_reply": "2026-01-23T01:06:07.676838Z"
+    }
+   },
    "outputs": [],
    "source": [
     "proximity_agg = proximity(points_agg, distance_metric=\"GREAT_CIRCLE\")\n",
@@ -174,7 +202,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:07.679921Z",
+     "iopub.status.busy": "2026-01-23T01:06:07.679810Z",
+     "iopub.status.idle": "2026-01-23T01:06:08.312249Z",
+     "shell.execute_reply": "2026-01-23T01:06:08.311466Z"
+    }
+   },
    "outputs": [],
    "source": [
     "line_agg = cvs.line(df, x='x', y='y')\n",
@@ -195,7 +230,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:08.314141Z",
+     "iopub.status.busy": "2026-01-23T01:06:08.314011Z",
+     "iopub.status.idle": "2026-01-23T01:06:09.111444Z",
+     "shell.execute_reply": "2026-01-23T01:06:09.110727Z"
+    }
+   },
    "outputs": [],
    "source": [
     "line_proximity = proximity(line_agg)\n",
@@ -220,7 +262,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:09.113437Z",
+     "iopub.status.busy": "2026-01-23T01:06:09.113324Z",
+     "iopub.status.idle": "2026-01-23T01:06:09.160715Z",
+     "shell.execute_reply": "2026-01-23T01:06:09.160008Z"
+    }
+   },
    "outputs": [],
    "source": [
     "where_clause = (line_proximity > 1) & (line_proximity < 1.1)\n",
@@ -250,7 +299,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:09.162557Z",
+     "iopub.status.busy": "2026-01-23T01:06:09.162446Z",
+     "iopub.status.idle": "2026-01-23T01:06:09.670196Z",
+     "shell.execute_reply": "2026-01-23T01:06:09.669284Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import allocation\n",
@@ -291,7 +347,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:09.671841Z",
+     "iopub.status.busy": "2026-01-23T01:06:09.671738Z",
+     "iopub.status.idle": "2026-01-23T01:06:10.210273Z",
+     "shell.execute_reply": "2026-01-23T01:06:10.209291Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import direction\n",
@@ -316,7 +379,16 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
