--- a/examples/user_guide/3_Zonal.ipynb
+++ b/examples/user_guide/3_Zonal.ipynb
@@ -28,7 +28,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:12.275987Z",
+     "iopub.status.busy": "2026-01-23T01:06:12.275887Z",
+     "iopub.status.idle": "2026-01-23T01:06:13.039323Z",
+     "shell.execute_reply": "2026-01-23T01:06:13.038551Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -55,7 +62,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:13.040818Z",
+     "iopub.status.busy": "2026-01-23T01:06:13.040524Z",
+     "iopub.status.idle": "2026-01-23T01:06:14.906413Z",
+     "shell.execute_reply": "2026-01-23T01:06:14.905515Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -82,7 +96,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:14.923850Z",
+     "iopub.status.busy": "2026-01-23T01:06:14.923698Z",
+     "iopub.status.idle": "2026-01-23T01:06:15.000511Z",
+     "shell.execute_reply": "2026-01-23T01:06:14.999805Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shade(terrain, cmap=Elevation, how='linear')"
@@ -118,7 +139,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:15.002085Z",
+     "iopub.status.busy": "2026-01-23T01:06:15.001979Z",
+     "iopub.status.idle": "2026-01-23T01:06:16.840772Z",
+     "shell.execute_reply": "2026-01-23T01:06:16.839951Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -153,7 +181,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:16.844561Z",
+     "iopub.status.busy": "2026-01-23T01:06:16.844434Z",
+     "iopub.status.idle": "2026-01-23T01:06:17.020670Z",
+     "shell.execute_reply": "2026-01-23T01:06:17.020147Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import zonal_stats\n",
@@ -176,7 +211,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:17.022197Z",
+     "iopub.status.busy": "2026-01-23T01:06:17.022079Z",
+     "iopub.status.idle": "2026-01-23T01:06:17.062268Z",
+     "shell.execute_reply": "2026-01-23T01:06:17.061587Z"
+    }
+   },
    "outputs": [],
    "source": [
     "custom_stats = dict(elevation_change=lambda zone: zone.max() - zone.min(),\n",
@@ -199,52 +241,84 @@
    "source": [
     "## Zonal crosstab\n",
     "\n",
-    "Zonal crosstab function can be used when we want to calculate cross-tabulated (categorical stats) areas between two datasets. As an example, assume we have gender data (male/female), and we want to see how all the gender groups distributed over all the zones defined above.\n",
+    "The zonal crosstab function calculates cross-tabulated (categorical) areas between two datasets. As an example, assume we have a forest survey with different tree species mapped across the terrain, and we want to see how the tree species are distributed along each segment of our hiking trail.\n",
     "\n",
-    "First, let's create a mock dataset for gender: 1 for male, and 2 for female. "
+    "First, let's create a mock dataset for tree species: 1 for Oak, 2 for Pine, and 3 for Maple."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:17.063510Z",
+     "iopub.status.busy": "2026-01-23T01:06:17.063402Z",
+     "iopub.status.idle": "2026-01-23T01:06:17.160546Z",
+     "shell.execute_reply": "2026-01-23T01:06:17.159664Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# define a mask where 0s are water, and 1s are land areas\n",
     "mask = terrain.data.astype(bool).astype(int)\n",
     "\n",
-    "# gender data where 0s are nodata, 1s are male, and 2s are female\n",
-    "# assume that the population only takes 10% overall, and the probability of male and female are equal.\n",
-    "genders = np.random.choice([0, 1, 2], p=[0.9, 0.05, 0.05], size=zones_agg.shape) * mask\n",
-    "genders_agg = xr.DataArray(genders, coords=terrain.coords, dims=terrain.dims)\n",
+    "# tree species data where 0s are no trees, 1 = Oak, 2 = Pine, 3 = Maple\n",
+    "# assume forest covers about 30% of the land, with species distributed across elevations\n",
+    "tree_species = np.random.choice([0, 1, 2, 3], p=[0.7, 0.1, 0.12, 0.08], size=zones_agg.shape) * mask\n",
+    "tree_species_agg = xr.DataArray(tree_species, coords=terrain.coords, dims=terrain.dims)\n",
     "\n",
-    "# visualize the results\n",
-    "genders_shaded = shade(genders_agg, cmap=['white', 'blue', 'red'])\n",
-    "stack(genders_shaded, terrain_shaded)"
+    "# visualize the results: green shades for different tree species\n",
+    "tree_colors = ['white', '#228B22', '#006400', '#32CD32']  # No trees, Oak (forest green), Pine (dark green), Maple (lime green)\n",
+    "trees_shaded = shade(tree_species_agg, cmap=tree_colors)\n",
+    "stack(trees_shaded, terrain_shaded)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, let's calculate the stats between the 2 datasets of genders and zones."
+    "Now, let's calculate the crosstab between the tree species and trail zones to see how many of each species we'd encounter on each trail segment."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:17.162297Z",
+     "iopub.status.busy": "2026-01-23T01:06:17.162194Z",
+     "iopub.status.idle": "2026-01-23T01:06:17.188779Z",
+     "shell.execute_reply": "2026-01-23T01:06:17.188148Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import zonal_crosstab\n",
     "\n",
-    "zonal_crosstab(zones=zones_agg, values=genders_agg, zone_ids=[11, 12, 13, 14, 15, 16], cat_ids=[1, 2])"
+    "# Calculate crosstab: rows are trail segments, columns are tree species (1=Oak, 2=Pine, 3=Maple)\n",
+    "result = zonal_crosstab(zones=zones_agg, values=tree_species_agg, zone_ids=[11, 12, 13, 14, 15, 16], cat_ids=[1, 2, 3])\n",
+    "result.columns = ['Trail Segment', 'Oak', 'Pine', 'Maple']\n",
+    "result"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
