--- a/examples/user_guide/4_Focal.ipynb
+++ b/examples/user_guide/4_Focal.ipynb
@@ -19,7 +19,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:19.920301Z",
+     "iopub.status.busy": "2026-01-23T01:06:19.920182Z",
+     "iopub.status.idle": "2026-01-23T01:06:20.806928Z",
+     "shell.execute_reply": "2026-01-23T01:06:20.806205Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -49,7 +56,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:20.808406Z",
+     "iopub.status.busy": "2026-01-23T01:06:20.808134Z",
+     "iopub.status.idle": "2026-01-23T01:06:22.522812Z",
+     "shell.execute_reply": "2026-01-23T01:06:22.522173Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -80,7 +94,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:22.540444Z",
+     "iopub.status.busy": "2026-01-23T01:06:22.540273Z",
+     "iopub.status.idle": "2026-01-23T01:06:23.615308Z",
+     "shell.execute_reply": "2026-01-23T01:06:23.614387Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -124,7 +145,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:23.618938Z",
+     "iopub.status.busy": "2026-01-23T01:06:23.618828Z",
+     "iopub.status.idle": "2026-01-23T01:06:25.344618Z",
+     "shell.execute_reply": "2026-01-23T01:06:25.343941Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import convolution\n",
@@ -177,7 +205,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:25.350392Z",
+     "iopub.status.busy": "2026-01-23T01:06:25.350269Z",
+     "iopub.status.idle": "2026-01-23T01:06:25.596415Z",
+     "shell.execute_reply": "2026-01-23T01:06:25.595660Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import convolution\n",
@@ -225,7 +260,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:25.601508Z",
+     "iopub.status.busy": "2026-01-23T01:06:25.601379Z",
+     "iopub.status.idle": "2026-01-23T01:06:25.604403Z",
+     "shell.execute_reply": "2026-01-23T01:06:25.603848Z"
+    }
+   },
    "outputs": [],
    "source": [
     "kernel = convolution.circle_kernel(cellsize_x, cellsize_y, 5*cellsize_x)\n",
@@ -235,7 +277,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:25.605531Z",
+     "iopub.status.busy": "2026-01-23T01:06:25.605438Z",
+     "iopub.status.idle": "2026-01-23T01:06:25.851016Z",
+     "shell.execute_reply": "2026-01-23T01:06:25.850421Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.focal import hotspots\n",
@@ -254,7 +303,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:25.852315Z",
+     "iopub.status.busy": "2026-01-23T01:06:25.852207Z",
+     "iopub.status.idle": "2026-01-23T01:06:25.925555Z",
+     "shell.execute_reply": "2026-01-23T01:06:25.924984Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# visualize the result\n",
@@ -266,7 +322,16 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
