--- a/examples/user_guide/5_Classification.ipynb
+++ b/examples/user_guide/5_Classification.ipynb
@@ -28,7 +28,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:28.580117Z",
+     "iopub.status.busy": "2026-01-23T01:06:28.580009Z",
+     "iopub.status.idle": "2026-01-23T01:06:29.461275Z",
+     "shell.execute_reply": "2026-01-23T01:06:29.460604Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -56,7 +63,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:29.462756Z",
+     "iopub.status.busy": "2026-01-23T01:06:29.462477Z",
+     "iopub.status.idle": "2026-01-23T01:06:32.321536Z",
+     "shell.execute_reply": "2026-01-23T01:06:32.320777Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -96,7 +110,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:32.349654Z",
+     "iopub.status.busy": "2026-01-23T01:06:32.349503Z",
+     "iopub.status.idle": "2026-01-23T01:06:32.594036Z",
+     "shell.execute_reply": "2026-01-23T01:06:32.593296Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import hillshade\n",
@@ -122,7 +143,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:32.595699Z",
+     "iopub.status.busy": "2026-01-23T01:06:32.595573Z",
+     "iopub.status.idle": "2026-01-23T01:06:32.678911Z",
+     "shell.execute_reply": "2026-01-23T01:06:32.678314Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.classify import equal_interval\n",
@@ -146,7 +174,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:32.680437Z",
+     "iopub.status.busy": "2026-01-23T01:06:32.680310Z",
+     "iopub.status.idle": "2026-01-23T01:06:32.985921Z",
+     "shell.execute_reply": "2026-01-23T01:06:32.985237Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.classify import natural_breaks\n",
@@ -174,7 +209,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:32.987681Z",
+     "iopub.status.busy": "2026-01-23T01:06:32.987564Z",
+     "iopub.status.idle": "2026-01-23T01:06:33.864318Z",
+     "shell.execute_reply": "2026-01-23T01:06:33.863780Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.zonal import regions\n",
@@ -203,7 +245,16 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
