--- a/examples/user_guide/7_Pathfinding.ipynb
+++ b/examples/user_guide/7_Pathfinding.ipynb
@@ -27,7 +27,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:56.017775Z",
+     "iopub.status.busy": "2026-01-23T01:06:56.017670Z",
+     "iopub.status.idle": "2026-01-23T01:06:56.921697Z",
+     "shell.execute_reply": "2026-01-23T01:06:56.920886Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -76,7 +83,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:56.923454Z",
+     "iopub.status.busy": "2026-01-23T01:06:56.923128Z",
+     "iopub.status.idle": "2026-01-23T01:06:58.976532Z",
+     "shell.execute_reply": "2026-01-23T01:06:58.975742Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import a_star_search\n",
@@ -135,7 +149,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:58.993845Z",
+     "iopub.status.busy": "2026-01-23T01:06:58.993685Z",
+     "iopub.status.idle": "2026-01-23T01:06:59.937427Z",
+     "shell.execute_reply": "2026-01-23T01:06:59.936992Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# find the path from start to goal,\n",
@@ -161,7 +182,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:59.938678Z",
+     "iopub.status.busy": "2026-01-23T01:06:59.938575Z",
+     "iopub.status.idle": "2026-01-23T01:07:00.158198Z",
+     "shell.execute_reply": "2026-01-23T01:07:00.157663Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# find the path from start to goal,\n",
@@ -190,7 +218,16 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
