--- a/examples/user_guide/8_Local_Tools.ipynb
+++ b/examples/user_guide/8_Local_Tools.ipynb
@@ -58,7 +58,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c7945275",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:02.795736Z",
+     "iopub.status.busy": "2026-01-23T01:07:02.795627Z",
+     "iopub.status.idle": "2026-01-23T01:07:03.061940Z",
+     "shell.execute_reply": "2026-01-23T01:07:03.061054Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -101,7 +108,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9ce0bf94",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:03.063570Z",
+     "iopub.status.busy": "2026-01-23T01:07:03.063370Z",
+     "iopub.status.idle": "2026-01-23T01:07:03.255365Z",
+     "shell.execute_reply": "2026-01-23T01:07:03.254848Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -150,7 +164,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "86353494",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:03.257562Z",
+     "iopub.status.busy": "2026-01-23T01:07:03.257319Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.082077Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.081473Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import cell_stats\n",
@@ -193,7 +214,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7f1b3bfa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:04.083582Z",
+     "iopub.status.busy": "2026-01-23T01:07:04.083286Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.144417Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.143610Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import combine\n",
@@ -230,7 +258,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b95f96c7",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:04.146229Z",
+     "iopub.status.busy": "2026-01-23T01:07:04.146110Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.255175Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.254618Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import lesser_frequency\n",
@@ -269,7 +304,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78a7824e",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:04.256881Z",
+     "iopub.status.busy": "2026-01-23T01:07:04.256769Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.334077Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.333525Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import equal_frequency\n",
@@ -308,7 +350,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1c6ab615",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:04.335260Z",
+     "iopub.status.busy": "2026-01-23T01:07:04.335151Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.413589Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.412969Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import greater_frequency\n",
@@ -347,7 +396,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b5b7b743",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:04.414863Z",
+     "iopub.status.busy": "2026-01-23T01:07:04.414755Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.483519Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.482976Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import lowest_position\n",
@@ -385,7 +441,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "cf614920",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:04.484819Z",
+     "iopub.status.busy": "2026-01-23T01:07:04.484717Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.558165Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.557625Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import highest_position\n",
@@ -423,7 +486,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "92d44cd2",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:04.559395Z",
+     "iopub.status.busy": "2026-01-23T01:07:04.559264Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.640352Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.639382Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import popularity\n",
@@ -463,7 +533,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9d10ab75",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:07:04.641935Z",
+     "iopub.status.busy": "2026-01-23T01:07:04.641616Z",
+     "iopub.status.idle": "2026-01-23T01:07:04.722488Z",
+     "shell.execute_reply": "2026-01-23T01:07:04.721856Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.local import rank\n",
@@ -485,7 +562,16 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
