--- a/examples/viewshed_gpu.ipynb
+++ b/examples/viewshed_gpu.ipynb
@@ -63,7 +63,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "file_name = '../xrspatial-examples/data/colorado_merge_3arc_resamp.tif'\n\nraster = rioxarray.open_rasterio(file_name).sel(band=1).drop_vars('band')\nraster.name = 'Colorado Elevation Raster'\n\nxmin, xmax = raster.x.data.min(), raster.x.data.max()\nymin, ymax = raster.y.data.min(), raster.y.data.max()\n\nxmin, xmax, ymin, ymax"
+   "source": [
+    "file_name = '../xrspatial-examples/data/colorado_merge_3arc_resamp.tif'\n",
+    "\n",
+    "raster = rioxarray.open_rasterio(file_name).sel(band=1).drop_vars('band')\n",
+    "raster.name = 'Colorado Elevation Raster'\n",
+    "\n",
+    "xmin, xmax = raster.x.data.min(), raster.x.data.max()\n",
+    "ymin, ymax = raster.y.data.min(), raster.y.data.max()\n",
+    "\n",
+    "xmin, xmax, ymin, ymax"
+   ]
   },
   {
    "cell_type": "markdown",
