--- a/examples/xarray-spatial_classification-methods.ipynb
+++ b/examples/xarray-spatial_classification-methods.ipynb
@@ -37,15 +37,41 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5476b1fa",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:29:34.478566Z",
+     "iopub.status.busy": "2026-01-23T14:29:34.478451Z",
+     "iopub.status.idle": "2026-01-23T14:29:35.180814Z",
+     "shell.execute_reply": "2026-01-23T14:29:35.180164Z"
+    }
+   },
    "outputs": [],
-   "source": "import xarray as xr\nimport rioxarray\n\nfile_name = '../xrspatial-examples/data/colorado_merge_3arc_resamp.tif'\nraster = rioxarray.open_rasterio(file_name).sel(band=1).drop_vars('band')\nraster.name = 'Colorado Elevation Raster'\n\nxmin, xmax = raster.x.data.min(), raster.x.data.max()\nymin, ymax = raster.y.data.min(), raster.y.data.max()\n\nxmin, xmax, ymin, ymax"
+   "source": [
+    "import xarray as xr\n",
+    "import rioxarray\n",
+    "\n",
+    "file_name = '../xrspatial-examples/data/colorado_merge_3arc_resamp.tif'\n",
+    "raster = rioxarray.open_rasterio(file_name).sel(band=1).drop_vars('band')\n",
+    "raster.name = 'Colorado Elevation Raster'\n",
+    "\n",
+    "xmin, xmax = raster.x.data.min(), raster.x.data.max()\n",
+    "ymin, ymax = raster.y.data.min(), raster.y.data.max()\n",
+    "\n",
+    "xmin, xmax, ymin, ymax"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "b6ae27af",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:29:35.182133Z",
+     "iopub.status.busy": "2026-01-23T14:29:35.181946Z",
+     "iopub.status.idle": "2026-01-23T14:29:39.225096Z",
+     "shell.execute_reply": "2026-01-23T14:29:39.224595Z"
+    }
+   },
    "outputs": [],
    "source": [
     "raster.plot.imshow(figsize=(15, 10));"
@@ -79,7 +105,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1c5d7b05",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:29:39.228456Z",
+     "iopub.status.busy": "2026-01-23T14:29:39.228154Z",
+     "iopub.status.idle": "2026-01-23T14:29:44.912345Z",
+     "shell.execute_reply": "2026-01-23T14:29:44.911618Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from datashader.transfer_functions import shade\n",
@@ -119,7 +152,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2e51b766",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:29:44.937679Z",
+     "iopub.status.busy": "2026-01-23T14:29:44.937212Z",
+     "iopub.status.idle": "2026-01-23T14:29:47.220141Z",
+     "shell.execute_reply": "2026-01-23T14:29:47.219517Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.classify import equal_interval\n",
@@ -149,7 +189,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "311879ba",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:29:47.236451Z",
+     "iopub.status.busy": "2026-01-23T14:29:47.236271Z",
+     "iopub.status.idle": "2026-01-23T14:29:49.726737Z",
+     "shell.execute_reply": "2026-01-23T14:29:49.725978Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.classify import quantile\n",
@@ -179,7 +226,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1060a994",
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:29:49.746122Z",
+     "iopub.status.busy": "2026-01-23T14:29:49.745954Z",
+     "iopub.status.idle": "2026-01-23T14:29:51.836933Z",
+     "shell.execute_reply": "2026-01-23T14:29:51.836214Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.classify import reclassify\n",
