--- a/examples/cloudless-mosaic-sentinel2.ipynb
+++ b/examples/cloudless-mosaic-sentinel2.ipynb
@@ -35,7 +35,7 @@
     "from datashader import Canvas\n",
     "\n",
     "import stackstac\n",
-    "from satsearch import Search\n",
+    "import pystac_client\n",
     "\n",
     "import xrspatial.multispectral as ms"
    ]
@@ -74,14 +74,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "items = Search(\n",
-    "    url='https://earth-search.aws.element84.com/v0',\n",
+    "catalog = pystac_client.Client.open('https://earth-search.aws.element84.com/v1')\n",
+    "\n",
+    "search = catalog.search(\n",
     "    bbox=[-96.185642, 28.569157, -95.117574, 29.500710],\n",
-    "    collections=['sentinel-s2-l2a-cogs'],\n",
+    "    collections=['sentinel-2-l2a'],\n",
     "    query={'eo:cloud_cover': {'lt': 25}},\n",
     "    datetime='2019-07-01/2020-06-30'\n",
-    ").items()\n",
+    ")\n",
     "\n",
+    "items = search.item_collection()\n",
     "len(items)"
    ]
   },
@@ -102,7 +104,7 @@
    "outputs": [],
    "source": [
     "stack_ds = stackstac.stack(\n",
-    "    items, epsg=32613, resolution=100, assets=['B04', 'B03', 'B02'], chunksize=4096\n",
+    "    items, epsg=32613, resolution=100, assets=['red', 'green', 'blue'], chunksize=4096\n",
     ")\n",
     "\n",
     "stack_ds"
@@ -216,8 +218,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
