--- a/examples/housing_price_feature_engineering.ipynb
+++ b/examples/housing_price_feature_engineering.ipynb
@@ -35,7 +35,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:26:33.627412Z",
+     "iopub.status.busy": "2026-01-23T14:26:33.627252Z",
+     "iopub.status.idle": "2026-01-23T14:26:34.752109Z",
+     "shell.execute_reply": "2026-01-23T14:26:34.751375Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -65,7 +72,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:26:34.754220Z",
+     "iopub.status.busy": "2026-01-23T14:26:34.753759Z",
+     "iopub.status.idle": "2026-01-23T14:26:34.757293Z",
+     "shell.execute_reply": "2026-01-23T14:26:34.756767Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# assume the data contain lat lon coords with some additional values\n",
@@ -164,7 +178,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T14:26:34.758688Z",
+     "iopub.status.busy": "2026-01-23T14:26:34.758576Z",
+     "iopub.status.idle": "2026-01-23T14:26:36.327629Z",
+     "shell.execute_reply": "2026-01-23T14:26:36.327038Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# bounding box of the raster\n",
@@ -256,7 +277,16 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
