--- a/examples/user_guide/6_Remote_Sensing.ipynb
+++ b/examples/user_guide/6_Remote_Sensing.ipynb
@@ -41,9 +41,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:36.383558Z",
+     "iopub.status.busy": "2026-01-23T01:06:36.383472Z",
+     "iopub.status.idle": "2026-01-23T01:06:37.224505Z",
+     "shell.execute_reply": "2026-01-23T01:06:37.223863Z"
+    }
+   },
    "outputs": [],
-   "source": "import datashader as ds\nfrom datashader.colors import Elevation\nimport datashader.transfer_functions as tf\nfrom datashader.transfer_functions import shade\nfrom datashader.transfer_functions import stack\nfrom datashader.transfer_functions import dynspread\nfrom datashader.transfer_functions import set_background\nfrom datashader.transfer_functions import Images, Image\nfrom datashader.utils import orient_array\nimport numpy as np\nimport xarray as xr\nimport rioxarray"
+   "source": [
+    "import datashader as ds\n",
+    "from datashader.colors import Elevation\n",
+    "import datashader.transfer_functions as tf\n",
+    "from datashader.transfer_functions import shade\n",
+    "from datashader.transfer_functions import stack\n",
+    "from datashader.transfer_functions import dynspread\n",
+    "from datashader.transfer_functions import set_background\n",
+    "from datashader.transfer_functions import Images, Image\n",
+    "from datashader.utils import orient_array\n",
+    "import numpy as np\n",
+    "import xarray as xr\n",
+    "import rioxarray"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,9 +77,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:37.226146Z",
+     "iopub.status.busy": "2026-01-23T01:06:37.225870Z",
+     "iopub.status.idle": "2026-01-23T01:06:42.915066Z",
+     "shell.execute_reply": "2026-01-23T01:06:42.914421Z"
+    }
+   },
    "outputs": [],
-   "source": "SCENE_ID = \"LC80030172015001LGN00\"\nEXTS = {\n    \"coastal_aerosol\": \"B1\",\n    \"blue\": \"B2\",\n    \"green\": \"B3\",\n    \"red\": \"B4\",\n    \"nir\": \"B5\",\n    \"swir1\": \"B6\",\n    \"swir2\": \"B7\",\n    \"panchromatic\": \"B8\",\n    \"cirrus\": \"B9\",\n    \"tir1\": \"B10\",\n    \"tir2\": \"B11\",\n    \"qa\": \"BQA\",\n}\n\ncvs = ds.Canvas(plot_width=1024, plot_height=1024)\nlayers = {}\nfor name, ext in EXTS.items():\n    layer = rioxarray.open_rasterio(\n        f\"../../xrspatial-examples/data/{SCENE_ID}_{ext}.tiff\"\n    ).load()[0]\n    layer.name = name\n    layer = cvs.raster(layer, agg=\"mean\")\n    layer.data = orient_array(layer)\n    layers[name] = layer\nlayers"
+   "source": [
+    "SCENE_ID = \"LC80030172015001LGN00\"\n",
+    "EXTS = {\n",
+    "    \"coastal_aerosol\": \"B1\",\n",
+    "    \"blue\": \"B2\",\n",
+    "    \"green\": \"B3\",\n",
+    "    \"red\": \"B4\",\n",
+    "    \"nir\": \"B5\",\n",
+    "    \"swir1\": \"B6\",\n",
+    "    \"swir2\": \"B7\",\n",
+    "    \"panchromatic\": \"B8\",\n",
+    "    \"cirrus\": \"B9\",\n",
+    "    \"tir1\": \"B10\",\n",
+    "    \"tir2\": \"B11\",\n",
+    "    \"qa\": \"BQA\",\n",
+    "}\n",
+    "\n",
+    "cvs = ds.Canvas(plot_width=1024, plot_height=1024)\n",
+    "layers = {}\n",
+    "for name, ext in EXTS.items():\n",
+    "    layer = rioxarray.open_rasterio(\n",
+    "        f\"../../xrspatial-examples/data/{SCENE_ID}_{ext}.tiff\"\n",
+    "    ).load()[0]\n",
+    "    layer.name = name\n",
+    "    layer = cvs.raster(layer, agg=\"mean\")\n",
+    "    layer.data = orient_array(layer)\n",
+    "    layers[name] = layer\n",
+    "layers"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +126,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:42.935130Z",
+     "iopub.status.busy": "2026-01-23T01:06:42.934915Z",
+     "iopub.status.idle": "2026-01-23T01:06:44.738253Z",
+     "shell.execute_reply": "2026-01-23T01:06:44.737480Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shaded = []\n",
@@ -99,7 +161,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:44.801288Z",
+     "iopub.status.busy": "2026-01-23T01:06:44.801125Z",
+     "iopub.status.idle": "2026-01-23T01:06:45.329465Z",
+     "shell.execute_reply": "2026-01-23T01:06:45.328897Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import true_color\n",
@@ -126,7 +195,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:45.334317Z",
+     "iopub.status.busy": "2026-01-23T01:06:45.334193Z",
+     "iopub.status.idle": "2026-01-23T01:06:45.394851Z",
+     "shell.execute_reply": "2026-01-23T01:06:45.394277Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import ndvi\n",
@@ -148,7 +224,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:45.396077Z",
+     "iopub.status.busy": "2026-01-23T01:06:45.395980Z",
+     "iopub.status.idle": "2026-01-23T01:06:45.493092Z",
+     "shell.execute_reply": "2026-01-23T01:06:45.492034Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import savi\n",
@@ -170,7 +253,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:45.494493Z",
+     "iopub.status.busy": "2026-01-23T01:06:45.494379Z",
+     "iopub.status.idle": "2026-01-23T01:06:45.556808Z",
+     "shell.execute_reply": "2026-01-23T01:06:45.556113Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import arvi\n",
@@ -192,7 +282,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:45.558420Z",
+     "iopub.status.busy": "2026-01-23T01:06:45.558322Z",
+     "iopub.status.idle": "2026-01-23T01:06:45.624019Z",
+     "shell.execute_reply": "2026-01-23T01:06:45.623233Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import evi\n",
@@ -210,7 +307,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:45.625504Z",
+     "iopub.status.busy": "2026-01-23T01:06:45.625372Z",
+     "iopub.status.idle": "2026-01-23T01:06:46.323237Z",
+     "shell.execute_reply": "2026-01-23T01:06:46.322580Z"
+    }
+   },
    "outputs": [],
    "source": [
     "vegetation_index_aggs = [ndvi_agg, savi_agg, arvi_agg, evi_agg]\n",
@@ -233,7 +337,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:46.335769Z",
+     "iopub.status.busy": "2026-01-23T01:06:46.335617Z",
+     "iopub.status.idle": "2026-01-23T01:06:46.688457Z",
+     "shell.execute_reply": "2026-01-23T01:06:46.687856Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import gci\n",
@@ -258,7 +369,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:46.695206Z",
+     "iopub.status.busy": "2026-01-23T01:06:46.695079Z",
+     "iopub.status.idle": "2026-01-23T01:06:46.991932Z",
+     "shell.execute_reply": "2026-01-23T01:06:46.991186Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import nbr\n",
@@ -278,7 +396,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:46.998233Z",
+     "iopub.status.busy": "2026-01-23T01:06:46.998115Z",
+     "iopub.status.idle": "2026-01-23T01:06:47.249053Z",
+     "shell.execute_reply": "2026-01-23T01:06:47.248477Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import nbr2\n",
@@ -299,7 +424,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:47.256305Z",
+     "iopub.status.busy": "2026-01-23T01:06:47.256163Z",
+     "iopub.status.idle": "2026-01-23T01:06:47.549938Z",
+     "shell.execute_reply": "2026-01-23T01:06:47.549180Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import ndmi\n",
@@ -320,7 +452,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:47.556302Z",
+     "iopub.status.busy": "2026-01-23T01:06:47.556165Z",
+     "iopub.status.idle": "2026-01-23T01:06:47.888887Z",
+     "shell.execute_reply": "2026-01-23T01:06:47.888339Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import sipi\n",
@@ -341,7 +480,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:47.896759Z",
+     "iopub.status.busy": "2026-01-23T01:06:47.896615Z",
+     "iopub.status.idle": "2026-01-23T01:06:48.254390Z",
+     "shell.execute_reply": "2026-01-23T01:06:48.253703Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial.multispectral import ebbi\n",
@@ -364,7 +510,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:48.261810Z",
+     "iopub.status.busy": "2026-01-23T01:06:48.261684Z",
+     "iopub.status.idle": "2026-01-23T01:06:49.926044Z",
+     "shell.execute_reply": "2026-01-23T01:06:49.925497Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from xrspatial import generate_terrain\n",
@@ -392,7 +545,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:49.927403Z",
+     "iopub.status.busy": "2026-01-23T01:06:49.927289Z",
+     "iopub.status.idle": "2026-01-23T01:06:50.003289Z",
+     "shell.execute_reply": "2026-01-23T01:06:50.002540Z"
+    }
+   },
    "outputs": [],
    "source": [
     "shade(terrain, cmap=Elevation, how=\"linear\")"
@@ -410,7 +570,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:50.004478Z",
+     "iopub.status.busy": "2026-01-23T01:06:50.004373Z",
+     "iopub.status.idle": "2026-01-23T01:06:51.078367Z",
+     "shell.execute_reply": "2026-01-23T01:06:51.077871Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rgba = stack(shade(terrain, cmap=Elevation, how=\"linear\")).to_pil()\n",
@@ -443,7 +610,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-23T01:06:51.079829Z",
+     "iopub.status.busy": "2026-01-23T01:06:51.079704Z",
+     "iopub.status.idle": "2026-01-23T01:06:51.474419Z",
+     "shell.execute_reply": "2026-01-23T01:06:51.473745Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from functools import partial\n",
@@ -495,7 +669,16 @@
  ],
  "metadata": {
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
